<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">test</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="account">Account : </string>
    <string name="password">Password : </string>
    <string name="login">Login</string>
    <string name="title_activity_show">Show</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="app">App</string>
    <string name="info">Info</string>
    <string name="connect">Connect</string>
    <string name="title_activity_app">App</string>
    <string name="desc">Description</string>
    <string name="title_activity_connect">Connect</string>
    <string name="hello">Hello World, FlickrjAndroidSampleActivity!</string>
    <string name="user_profile_view_name">User Profile</string>
    <string name="main_no_items">No pictures to display</string>
    <string name="btn_refresh_user_profile_title">Refresh</string>
    <string name="btn_add_more">Add More</string>
    <string name="title_activity_info">Info</string>
    <string name="name">Name : </string>
    <string name="age">Age : </string>
    <string name="gender">Gender : </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="look">look</string>
    <string name="error">look</string>
    <string name="picaddress">picaddress</string>
    <string name="title_activity_net">Net</string>

</resources>
