<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Info" >

    <TextView
        android:id="@+id/ageinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameinfo"
        android:layout_marginTop="31dp"
        android:layout_toLeftOf="@+id/editText2"
        android:text="@string/age" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ageinfo"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="text"  />

    <TextView
        android:id="@+id/nameinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="69dp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/nameinfo"
        android:layout_toRightOf="@+id/nameinfo"
        android:ems="10" 
        android:inputType="text" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ageinfo"
        android:layout_marginTop="30dp"
        android:text="@string/gender" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/gender"
        android:layout_alignBottom="@+id/gender"
        android:layout_alignRight="@+id/editText2"
        android:text="@string/male" />

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/gender"
        android:layout_alignBottom="@+id/gender"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@+id/gender"
        android:text="@string/female" />

</RelativeLayout>
